# tg-tui

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: action.rs  app_config.rs  args.rs  async.rs  bindings.rs  common.rs  error.rs  main.rs  mode.rs  utils.rs  view.rs
src/commands/: mod.rs  parser.rs
src/cursive_views/: actions_view.rs  messages_view.rs  mod.rs
src/view/: dialog.rs  mod.rs
