[package]
name = "tg-tui"
version = "0.1.0"
description = "Terminal user interface client for Telegram"
authors = ["hcpl <hcpl.prog@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/hcpl/tg-tui"
repository = "https://github.com/hcpl/tg-tui"

[dependencies]
app_dirs = "1.1.1"
chrono = "0.4.0"
clap = "2.26.0"
config = "0.7.0"
#cursive = { version = "0.6.4", default-features = false }
cursive = { git = "https://github.com/gyscos/Cursive", default-features = false }
error-chain = "0.10.0"
lazy_static = "0.2.8"
maplit = "0.1.4"
pom = "1.0.1"
rand = "0.3.16"
serde = "1.0.11"
serde_derive = "1.0.11"
textwrap = "0.7.0"

[features]
default = ["ncurses-backend"]

ncurses-backend = ["cursive/ncurses-backend"]
pancurses-backend = ["cursive/pancurses-backend"]
termion-backend = ["cursive/termion-backend"]
blt-backend = ["cursive/blt-backend"]
