[package]
name = "tg-tui"
version = "0.0.1"
description = "Terminal user interface client for Telegram"
authors = ["hcpl <hcpl.prog@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/hcpl/tg-tui"
repository = "https://github.com/hcpl/tg-tui"

[dependencies]
app_dirs = "1.1.1"
chrono = "0.4.0"
clap = "2.29.0"
config = "0.7.0"
# cursive =0.7.5 uses Vec::splice, which requires Rust >=1.21
# cursive >=0.7.3 <=0.7.4 use usize::min (from Ord trait), which requires Rust >=1.21
cursive = { version = "<=0.7.2", default-features = false }
env_logger = "0.4.3"
error-chain = "0.11.0"
lazy_static = "1.0.0"
maplit = "1.0.0"
pom = "1.1.0"
rand = "0.4.1"
serde = "1.0.26"
serde_derive = "1.0.26"
structopt = "0.1.6"
structopt-derive = "0.1.6"
textwrap = "0.9.0"

[features]
default = ["ncurses-backend"]

ncurses-backend = ["cursive/ncurses-backend"]
pancurses-backend = ["cursive/pancurses-backend"]
termion-backend = ["cursive/termion-backend"]
blt-backend = ["cursive/blt-backend"]
